feat: add desktop notifications v1
